--- a/src/components/more-button/more-button.module.css
+++ b/src/components/more-button/more-button.module.css
@@ -7,4 +7,10 @@
   justify-content: center;
   align-items: center;
   padding: 0;
+  background-color: #d3d3d3;
+}
+
+.button:hover {
+  cursor: pointer;
+  opacity: .7;
 }
