--- a/src/components/dropdown-menu/dropdown-menu.module.css
+++ b/src/components/dropdown-menu/dropdown-menu.module.css
@@ -1,5 +1,6 @@
 .container {
   background-color: white;
-  width: 400px;
+  width: 270px;
   border-radius: 5px;
+  box-shadow: 0 0 50px 2px rgba(0, 0, 0, 0.1);
 }
