--- a/src/components/dropdown-menu/dropdown-menu.module.css
+++ b/src/components/dropdown-menu/dropdown-menu.module.css
@@ -1,6 +1,7 @@
 .container {
   background-color: white;
-  width: 270px;
+  width: 260px;
   border-radius: 5px;
   box-shadow: 0 0 50px 2px rgba(0, 0, 0, 0.1);
+  position: absolute;
 }
