--- a/src/components/menu-item/menu-item.module.css
+++ b/src/components/menu-item/menu-item.module.css
@@ -3,6 +3,9 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 10px;
+  width: 100%;
+  border: none;
+  background-color: transparent;
 }
 
 .container:hover {
@@ -15,4 +18,5 @@
   margin: 14px 0;
   font-size: 16px;
   line-height: 20px;
+  text-align: left;
 }
