feat: add tests for app

--- a/src/components/menu-item/menu-item.module.css
+++ b/src/components/menu-item/menu-item.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 10px;
-  width: 100%;
+  width: calc(100% - 20px);
   border: none;
   background-color: transparent;
 }
